--- a/site/index.html
+++ b/site/index.html
@@ -15,16 +15,16 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Rishita</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">What are you waiting for...</p>
     </div>
     <div class="three">
       <p>It's your birthday!!! :D</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox">Happy birthday Jaan!!! Many many happy blah blah...</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <p class="idea-3">I realised, I wanted to do something
         <strong>special</strong>.</p>
       <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+      <p class="idea-5">You are <strong>Special</strong>
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -43,8 +43,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="img/photo.png" alt="" class="main-dp" id="imagePath">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
         <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
@@ -117,14 +116,21 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>I hope you like it, but WAIT i have something more to show you</p>
+      <p>Click the button below for the next page! 😘</p>
+      <p><a class="button" href="./Wish-Her">Click me</a></p>
       <p class="last-smile">:)</p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p>Made with ❤️ by Bhargab
     </div>
   </div>
 </body>
 
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-<script type="application/javascript" src="script/main.js"></script>
+<script type="text/babel" src="script/main.js"></script>
 
 </html>
