--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Rishita</span>
+        <span id="name">Jaan</span>
       </h1>
       <p class="two" id="greetingText">What are you waiting for...</p>
     </div>
