--- a/site/index.html
+++ b/site/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div style="background-image: url('img/girl.jpg'); position: relative;">
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
@@ -105,15 +106,7 @@
       <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
         <circle cx="20" cy="20" r="20" />
       </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
-      <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-        <circle cx="20" cy="20" r="20" />
-      </svg>
+      
     </div>
     <div class="nine">
       <p>I hope you like it, but WAIT i have something more to show you</p>
