--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div style="background-image: url('img/girl.jpg'); position: relative;">
+  <div style="background-image: url('img/girl.jpg'); background-position: center; display: flex; t">
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
@@ -44,7 +44,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/photo.png" alt="" class="main-dp" id="imagePath">
+      <img src="img/photo.png" alt="" class="main-dp"  id="imagePath">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
         <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
@@ -117,7 +117,7 @@
       <br>
       <br>
       <br>
-      <p>Made with ❤️ by Bhargab
+      <p style="color:00FFFF; ">Made with ❤️ by Bhargab
     </div>
   </div>
 </body>
