--- a/site/index.html
+++ b/site/index.html
@@ -111,7 +111,7 @@
     <div class="nine">
       <p>I hope you like it, but WAIT i have something more to show you</p>
       <p>Click the button below for the next page! 😘</p>
-      <p><a class="button" href="./Wish">Click me</a></p>
+      <p><a class="button" href="https://bhargab26.github.io/papori7/site/Wish/index1.html">Click me</a></p>
       <p class="last-smile">:)</p>
       <br>
       <br>
