--- a/site/Wish/challange/index2.html
+++ b/site/Wish/challange/index2.html
@@ -18,7 +18,7 @@
   <main>
   <div>
     <div>
-      <span>I&nbsp;HATE&nbsp;YOU</span> <!-- this text can be edited -->
+      <span>If&nbsp;YOU HATE&nbsp;ME</span> <!-- this text can be edited -->
       <span>
         <a>
           <b><a href="../errorr">then click here </a>&nbsp;</b> <!--change domain name here -->
@@ -37,7 +37,7 @@
       <polygon points='118.302698 8 59.5369448 66.7657528 186.487016 193.715824 14 366.202839 153.491505 505.694344 68.1413353 591.044514 0 591.044514 0 8'></polygon>
     </svg>
     <div>
-      <span>I&nbsp;NEED&nbsp;YOU</span> <!-- this text can be edited -->
+      <span>If&nbsp;YOU NEED&nbsp;ME</span> <!-- this text can be edited -->
       <span>
         <a>
           <b><a href="../message">then click here</a>&nbsp;</b> <!-- change domain name here -->
