--- a/site/Wish/index1.html
+++ b/site/Wish/index1.html
@@ -28,18 +28,18 @@
     <script src="js/index.js"></script>
     <style>
     .button {
-      display: inline-block;
+      display: flex;
       border-radius: 5px;
       background-color: #808080;
       border: none;
       color: #FFFFFF;
       text-align: center;
       font-size: 28px;
-      padding: 24px;
+      padding:24px;
       width: 200px;
       transition: all 0.5s;
       cursor: pointer;
-      margin: 1px;
+      margin-right: 1px;
     }
 
     .button span {
@@ -67,10 +67,11 @@
       right: 0;
     }
     </style>
-    <div align="right">
+    <div align="top">
     
 
-    <button class="button" style="align-self: center;"><span><a href="./challange">NEXT</a></span></button> <!-- change domain here -->
+
+    <button class="button"><span><a href="./challange">NEXT</a></span></button> <!-- change domain here -->
     </div>
 	<body oncontextmenu="return false"></body>
 </body>
