--- a/site/Wish/errorr/index.html
+++ b/site/Wish/errorr/index.html
@@ -312,7 +312,7 @@ display:none;
 
    <h2><font color="white">CLICK BELOW --</font></h2>
 
-   <button class="button" style="vertical-align:middle"><span><a href="../challange">Go Back</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
+   <button class="button" style="vertical-align:middle"><span><a href="https://bhargab26.github.io/papori7/site/Wish/challange/index2.html">Go Back</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
    </div>
    </h2>
 </html>
