--- a/site/Wish/message/index.html
+++ b/site/Wish/message/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html lang="as" >
 <head>
   <meta charset="UTF-8">
   <title>HAPPY BIRTHDAY BABE</title> <!-- TITLE OF THIS PAGE CAN BE CHANGED HERE -->
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <font size="30" color="red">Dear BABE❤️...,</font> <!-- CHANGE NAME-->
+  <font size="30" color="red">জান❤️...,</font> <!-- CHANGE NAME-->
   <font size="2">­<p> _ </p></font>
   <font size="6"><div id="container"></div></font>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
