--- a/site/Wish/challange/index2.html
+++ b/site/Wish/challange/index2.html
@@ -40,7 +40,7 @@
       <span>If&nbsp;YOU NEED&nbsp;ME</span> <!-- this text can be edited -->
       <span>
         <a>
-          <b><a href="../message">then click here</a>&nbsp;</b> <!-- change domain name here -->
+          <b><a href="https://bhargab26.github.io/birthday7/site/">then click here</a>&nbsp;</b> <!-- change domain name here -->
         </a>
       </span>
     </div>
