--- a/site/Wish/message/index.html
+++ b/site/Wish/message/index.html
@@ -62,7 +62,7 @@
     </style>
     <div align="right">
 
-    <button class="button" style="vertical-align:middle"><span><a href="../hbd">NEXT</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
+    <button class="button" style="vertical-align:middle"><span><a href="https://bhargab26.github.io/birthdayp/site/papori.html">NEXT</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
     </div>
 
 </body>
